--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "devDependencies": {
     "@types/sass": "^1.16.0",
     "@vue/compiler-sfc": "^3.0.2",
-    "@vuedx/typecheck": "^0.2.4-0",
-    "@vuedx/typescript-plugin-vue": "^0.2.4-0",
+    "@vuedx/typecheck": "^0.3.1-insiders-1606047354.0",
+    "@vuedx/typescript-plugin-vue": "^0.3.1-insiders-1606047354.0",
     "sass": "^1.29.0",
-    "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.8"
+    "typescript": "^4.1.2",
+    "vite": "^1.0.0-rc.9"
   }
 }
