--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "typecheck . && vite build"
   },
   "dependencies": {
+    "calculate-size": "^1.1.1",
     "fast-deep-equal": "^3.1.3",
     "vue": "^3.0.2"
   },
