--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "calculate-size": "^1.1.1",
     "fast-deep-equal": "^3.1.3",
+    "uuid": "^8.3.1",
     "vue": "^3.0.2"
   },
   "devDependencies": {
     "@types/sass": "^1.16.0",
+    "@types/uuid": "^8.3.0",
     "@vue/compiler-sfc": "^3.0.2",
     "@vuedx/typecheck": "^0.2.4-0",
     "@vuedx/typescript-plugin-vue": "^0.2.4-0",
