--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
 		"jsx": "preserve",
 		"sourceMap": true,
 		"lib": ["esnext", "dom"],
-		"plugins": [{ "name": "@vuedx/typescript-plugin-vue" }]
+		"plugins": [{ "name": "@vuedx/typescript-plugin-vue" }],
+		"types": []
 	},
+	"exclude": ["**/node_modules", "**/.*/"],
 	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
