--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "logik",
-  "version": "0.1.0",
-  "private": true,
-  "license": "Apache-2.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "typecheck . && vite build"
-  },
-  "dependencies": {
-    "calculate-size": "^1.1.1",
-    "uuid": "^8.3.1",
-    "vue": "^3.0.3"
-  },
-  "devDependencies": {
-    "@types/sass": "^1.16.0",
-    "@types/uuid": "^8.3.0",
-    "@vue/compiler-sfc": "^3.0.2",
-    "@vuedx/typecheck": "^0.2.4-0",
-    "@vuedx/typescript-plugin-vue": "^0.2.4-0",
-    "sass": "^1.29.0",
-    "typescript": "^4.1.2",
-    "vite": "^1.0.0-rc.13"
-  }
+	"name": "logik",
+	"version": "0.1.0",
+	"private": true,
+	"license": "Apache-2.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "typecheck . && vite build",
+		"test": "jest"
+	},
+	"dependencies": {
+		"calculate-size": "^1.1.1",
+		"uuid": "^8.3.1",
+		"vue": "^3.0.3"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"@babel/preset-env": "^7.12.7",
+		"@babel/preset-typescript": "^7.12.7",
+		"@types/jest": "^26.0.15",
+		"@types/sass": "^1.16.0",
+		"@types/uuid": "^8.3.0",
+		"@vue/compiler-sfc": "^3.0.3",
+		"@vuedx/typecheck": "^0.2.4-0",
+		"@vuedx/typescript-plugin-vue": "^0.2.4-0",
+		"babel-jest": "^26.6.3",
+		"jest": "^26.6.3",
+		"sass": "^1.29.0",
+		"typescript": "^4.1.2",
+		"vite": "^1.0.0-rc.13"
+	}
 }
