--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"sourceMap": true,
 		"lib": ["esnext", "dom"],
 		"plugins": [{ "name": "@vuedx/typescript-plugin-vue" }],
-		"types": []
+		"types": ["jest"]
 	},
 	"exclude": ["**/node_modules", "**/.*/"],
 	"include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
